...
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="8dp" />

        <!-- Activity information: icon, name, description and start datetime -->
        <ImageView
            android:id="@+id/stats_activity_type_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toTopOf="@id/guideline_top"
            tools:src="@drawable/ic_activity_bike_24dp" />

...
            style="@style/TextAppearance.OpenTracks.PrimaryValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:value="@string/value_unknown"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintEnd_toStartOf="@id/stats_max_speed_unit"
            app:layout_constraintTop_toBottomOf="@id/stats_max_speed_label"
            tools:text="30.00" />

        <TextView
            android:id="@+id/stats_max_speed_unit"
            style="@style/TextAppearance.OpenTracks.PrimaryUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/stats_max_speed_value"
            app:layout_constraintStart_toEndOf="@id/stats_max_speed_value"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            tools:text="km/h" />

        <!-- Avg. moving speed/pace -->
        <TextView
            android:id="@+id/stats_moving_speed_label"
            style="@style/TextAppearance.OpenTracks.PrimaryHeader"
            android:layout_width="wrap_content"
...
            style="@style/TextAppearance.OpenTracks.PrimaryValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:value="@string/value_unknown"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintEnd_toStartOf="@id/stats_moving_speed_unit"
            app:layout_constraintTop_toBottomOf="@id/stats_moving_speed_label"
            tools:text="30.00" />

        <TextView
            android:id="@+id/stats_moving_speed_unit"
            style="@style/TextAppearance.OpenTracks.PrimaryUnit"
...
            style="@style/TextAppearance.OpenTracks.SecondaryValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:value="@string/value_unknown"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintEnd_toStartOf="@id/stats_average_speed_unit"
            app:layout_constraintTop_toBottomOf="@id/stats_average_speed_label"
            tools:text="30.00" />

        <TextView
            android:id="@+id/stats_average_speed_unit"
            style="@style/TextAppearance.OpenTracks.PrimaryUnit"
...
