...
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/controller_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/controller_background"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <ImageButton
        android:id="@+id/controller_record"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:background="@android:color/transparent"
        android:contentDescription="@string/image_record"
        android:src="@drawable/ic_button_record" />
...
