...
    <string name="gps_recording_status">%1$s: %2$s</string>
    <string name="gps_recording_without_signal">OpenTracks is recording without GPS data.</string>
    <!-- Image -->
    <string name="image_arrow">Arrow</string>
    <string name="image_marker_count">Marker count</string>
    <string name="image_photo_marker">Photo marker</string>
    <string name="image_record">Record</string>
    <string name="image_stop">Stop</string>
    <string name="image_discard">Discard</string>
    <string name="image_track">Track</string>
    <!-- Import -->
    <string name="import_thread_interrupted">Thread interrupted</string>
    <string name="import_unsupported_format">Unsupported file format</string>
...
    <string name="unit_kilometer_per_hour">km/h</string>
    <string name="unit_meter">m</string>
    <string name="unit_mile">mi</string>
    <string name="unit_mile_per_hour">mph</string>
    <string name="unit_nautical_mile">NM</string>
    <string name="unit_knots">kn</string>
    <string name="unit_minute_per_kilometer">min/km</string>
    <string name="unit_minute_per_mile">min/mi</string>
    <string name="unit_minute_per_nautical_mile">min/NM</string>
    <!-- Location Coordinates -->
    <string name="location_coordinate">%1$s°</string>
    <string name="location_latitude_longitude">%1$s, %2$s</string>
    <!-- Value -->
...
