<?xml version="1.0" encoding="utf-8"?><!--
Copyright 2013 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <GridView
        android:id="@+id/choose_activity_type_grid_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:columnWidth="56dp"
        android:numColumns="4"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingEnd="12dp"
        android:stretchMode="spacingWidth"
        android:verticalSpacing="4dp" />
</LinearLayout>