...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/track_detail_activity_tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/track_recording_coordinator_layout"
            android:layout_width="match_parent"
...
        app:fabAlignmentMode="end"
        app:fabAnchorMode="cradle"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:menu="@menu/track_record" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/track_recording_fab_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_record_24"
        android:contentDescription="@string/image_stop"
        app:layout_anchor="@id/bottom_app_bar" />

...
