...

        <com.google.android.material.search.SearchBar
            android:id="@+id/track_list_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/searchbar_scrolling_view_behavior"
            app:menu="@menu/track_list"
            app:navigationIcon="@drawable/ic_logo_color_24dp" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.search.SearchView
        android:id="@+id/track_list_search_view"
        android:layout_width="match_parent"
...
            app:icon="@drawable/ic_gps_off_24dp"
            app:iconTint="?attr/colorOnBackground" />

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/track_list_fab_action"
        android:tint="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_record"
        android:src="@drawable/ic_baseline_record_24"
        app:layout_anchor="@id/bottom_app_bar" />
...
