...
                    android:id="@+id/discard_button"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginEnd="52dp"
                    android:contentDescription="@string/image_discard"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/resume_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="?attr/colorOnBackground"
                    app:srcCompat="@drawable/ic_delete_forever_24dp" />

                <ImageView
                    android:id="@+id/resume_button"
...
                    app:layout_constraintEnd_toStartOf="@id/buttons_guideline"
                    app:layout_constraintStart_toEndOf="@id/buttons_guideline"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_button_resume" />

                <ImageView
                    android:id="@+id/finish_button"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/image_stop"
                    android:layout_marginStart="36dp"
                    app:layout_constraintBottom_toBottomOf="@id/resume_button"
                    app:layout_constraintStart_toEndOf="@id/resume_button"
...
